# toggle

./: .gitignore  GNUmakefile  Justfile  README.md  flake.nix  limine.conf  toggle.gdb
kernel/: Cargo.toml  Justfile  build.rs  flake.nix  linker-aarch64.ld  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld  rust-toolchain.toml
kernel/src/: main.rs
kernel/src/arch/: cpuid.rs  hcf.rs  mod.rs  msr.rs
kernel/src/mem/: heap.rs  paging.rs
kernel/src/requests/: mod.rs
kernel/src/sys/: gdt.rs  idt.rs  tss.rs
kernel/src/writer/: buffer.rs  font.rs  macros.rs  mod.rs
