[package]
name = "toggle"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.3.1"
spin = "0.9.8"
x86_64 = "0.14.2"
noto-sans-mono-bitmap = "0.3.0"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
